join 기능 스키마 반영 및 복구 + operator 성능 향상